[gd_scene load_steps=48 format=3 uid="uid://kd4xv22ktbk8"]

[ext_resource type="Script" path="res://scripts/combat/enemies/enemy_goblin_torch.gd" id="1_ynj6k"]
[ext_resource type="Texture2D" uid="uid://d3aac0snojkt8" path="res://assets/graphics/combat/combat_test_graphics/Characters/Enemies/Goblins/Torch_Red.png" id="2_ihf1h"]
[ext_resource type="Script" path="res://scripts/core/animation_tree_state.gd" id="3_7nd7c"]
[ext_resource type="PackedScene" uid="uid://bhxbvg4wovjie" path="res://scenes/combat/combat_test/fx_step_dust_spawner.tscn" id="4_4li6g"]
[ext_resource type="PackedScene" uid="uid://bl51pk2vko0vm" path="res://scenes/combat/combat_health_bar.tscn" id="4_61vk5"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="5_kd7gl"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="6_fmnhd"]
[ext_resource type="Script" path="res://addons/godot_state_charts/history_state.gd" id="7_gryei"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="8_vqsdi"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="9_40na2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yqcq4"]
radius = 20.8
height = 99.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qmhym"]
radius = 39.55

[sub_resource type="CircleShape2D" id="CircleShape2D_irewp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8diwu"]
atlas = ExtResource("2_ihf1h")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_728n6"]
atlas = ExtResource("2_ihf1h")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jm06"]
atlas = ExtResource("2_ihf1h")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_oik4e"]
atlas = ExtResource("2_ihf1h")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_eivie"]
atlas = ExtResource("2_ihf1h")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmip8"]
atlas = ExtResource("2_ihf1h")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwpgp"]
atlas = ExtResource("2_ihf1h")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_68e08"]
atlas = ExtResource("2_ihf1h")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_klign"]
atlas = ExtResource("2_ihf1h")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_60oeu"]
atlas = ExtResource("2_ihf1h")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_myctx"]
atlas = ExtResource("2_ihf1h")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewsox"]
atlas = ExtResource("2_ihf1h")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_e34ds"]
atlas = ExtResource("2_ihf1h")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlax3"]
atlas = ExtResource("2_ihf1h")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh6y8"]
atlas = ExtResource("2_ihf1h")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jy0dh"]
atlas = ExtResource("2_ihf1h")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vs8j6"]
atlas = ExtResource("2_ihf1h")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8iswj"]
atlas = ExtResource("2_ihf1h")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lo346"]
atlas = ExtResource("2_ihf1h")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_4bak4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8diwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_728n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jm06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oik4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eivie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmip8")
}],
"loop": true,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwpgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68e08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klign")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60oeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myctx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewsox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e34ds")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlax3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh6y8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jy0dh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vs8j6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8iswj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lo346")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3oto2"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b1x0p"]
animation = &"get_hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tem6a"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r6yn8"]
animation = &"skill_berserk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_salig"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_idp7p"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_6m1py"]
states/End/position = Vector2(1081, 111)
states/Start/position = Vector2(211, 100)
states/attack/node = SubResource("AnimationNodeAnimation_3oto2")
states/attack/position = Vector2(537, 100)
states/get_hit/node = SubResource("AnimationNodeAnimation_b1x0p")
states/get_hit/position = Vector2(537, 33)
states/idle/node = SubResource("AnimationNodeAnimation_tem6a")
states/idle/position = Vector2(402, 33)
states/skill_berserk/node = SubResource("AnimationNodeAnimation_r6yn8")
states/skill_berserk/position = Vector2(402, 168)
states/walk/node = SubResource("AnimationNodeAnimation_salig")
states/walk/position = Vector2(402, 100)
transitions = ["Start", "walk", SubResource("AnimationNodeStateMachineTransition_idp7p")]
graph_offset = Vector2(-100, 13)

[sub_resource type="Animation" id="Animation_q4tl2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -36)]
}

[sub_resource type="Animation" id="Animation_kvjdg"]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"apply_attack_damage"
}]
}

[sub_resource type="Animation" id="Animation_bwh3k"]
resource_name = "get_hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 0.8), Vector2(1.3, 1.3), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -36), Vector2(0, -30), Vector2(0, -46), Vector2(0, -36)]
}

[sub_resource type="Animation" id="Animation_xvpet"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_qgsh1"]
resource_name = "skill_berserk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_8ecui"]
resource_name = "walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FXStepDustSpawner")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"spawn_dust"
}, {
"args": [],
"method": &"spawn_dust"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_df5fh"]
_data = {
"RESET": SubResource("Animation_q4tl2"),
"attack": SubResource("Animation_kvjdg"),
"get_hit": SubResource("Animation_bwh3k"),
"idle": SubResource("Animation_xvpet"),
"skill_berserk": SubResource("Animation_qgsh1"),
"walk": SubResource("Animation_8ecui")
}

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
position = Vector2(500, 0)
collision_mask = 6
script = ExtResource("1_ynj6k")
attack_damage = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4.26, -50)
shape = SubResource("CapsuleShape2D_yqcq4")
debug_color = Color(0.992482, 0, 0.251412, 0.42)

[node name="Areas" type="Node2D" parent="."]

[node name="Areas_FacingRight" type="Node2D" parent="Areas"]

[node name="AttackArea_Melee_R" type="Area2D" parent="Areas/Areas_FacingRight"]
collision_mask = 6

[node name="CS2D_Melee_R" type="CollisionShape2D" parent="Areas/Areas_FacingRight/AttackArea_Melee_R"]
position = Vector2(0, -40)
shape = SubResource("CircleShape2D_qmhym")

[node name="Areas_FacingLeft" type="Node2D" parent="Areas"]
visible = false

[node name="AttackArea_Melee_L" type="Area2D" parent="Areas/Areas_FacingLeft"]
collision_mask = 6

[node name="CS2D_Melee_L" type="CollisionShape2D" parent="Areas/Areas_FacingLeft/AttackArea_Melee_L"]
position = Vector2(0, -62.585)
shape = SubResource("CircleShape2D_qmhym")

[node name="Area_ScanRadius" type="Area2D" parent="Areas"]
collision_layer = 0
collision_mask = 6

[node name="CS2D_ScanRadius" type="CollisionShape2D" parent="Areas/Area_ScanRadius"]
position = Vector2(3, -53)
scale = Vector2(15, 15)
shape = SubResource("CircleShape2D_irewp")
debug_color = Color(0.772201, 0.443305, 9.62615e-07, 0.42)

[node name="Visuals" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Visuals"]
texture_filter = 1
position = Vector2(0, -36)
sprite_frames = SubResource("SpriteFrames_4bak4")
animation = &"idle"

[node name="AnimationTree" type="AnimationTree" parent="Visuals"]
active = false
tree_root = SubResource("AnimationNodeStateMachine_6m1py")
anim_player = NodePath("../AnimationPlayer")
script = ExtResource("3_7nd7c")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Visuals"]
libraries = {
"": SubResource("AnimationLibrary_df5fh")
}

[node name="FXStepDustSpawner" parent="Visuals" instance=ExtResource("4_4li6g")]

[node name="Timers" type="Node2D" parent="."]

[node name="Attacks" type="Node2D" parent="Timers"]

[node name="AttackTimer" type="Timer" parent="Timers/Attacks"]
wait_time = 2.5
one_shot = true

[node name="Skill_Berserk_Duration" type="Timer" parent="Timers/Attacks"]
wait_time = 5.0
one_shot = true

[node name="Skill_Berserk_DiceThrow_Timer" type="Timer" parent="Timers/Attacks"]
wait_time = 0.25
one_shot = true

[node name="Skill_Berserk_Timer" type="Timer" parent="Timers/Attacks"]
wait_time = 0.75
one_shot = true

[node name="Skill_Berserk_Cooldown" type="Timer" parent="Timers/Attacks"]
wait_time = 15.0
one_shot = true

[node name="CombatHealthBar" parent="." instance=ExtResource("4_61vk5")]
offset_top = -140.0
offset_bottom = -140.0

[node name="StateChart" type="Node" parent="."]
script = ExtResource("5_kd7gl")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("6_fmnhd")
initial_state = NodePath("Mode_Normal")

[node name="HistoryState" type="Node" parent="StateChart/Root"]
script = ExtResource("7_gryei")
deep = true
default_state = NodePath("../Mode_Normal")

[node name="Mode_Normal" type="Node" parent="StateChart/Root"]
script = ExtResource("6_fmnhd")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/Root/Mode_Normal"]
script = ExtResource("8_vqsdi")

[node name="Die" type="Node" parent="StateChart/Root/Mode_Normal/Idle"]
script = ExtResource("9_40na2")
to = NodePath("../../../Die")
event = &"sce_die"
delay_in_seconds = "0.0"

[node name="To_GetHit" type="Node" parent="StateChart/Root/Mode_Normal/Idle"]
script = ExtResource("9_40na2")
to = NodePath("../../../GetHit")
event = &"sce_get_hit"
delay_in_seconds = "0.0"

[node name="To_MoveToTarget" type="Node" parent="StateChart/Root/Mode_Normal/Idle"]
script = ExtResource("9_40na2")
to = NodePath("../../MoveToTarget")
event = &"sce_move_to_target"
delay_in_seconds = "0.0"

[node name="To_Attack" type="Node" parent="StateChart/Root/Mode_Normal/Idle"]
script = ExtResource("9_40na2")
to = NodePath("../../Attack")
event = &"sce_attack"
delay_in_seconds = "0.0"

[node name="MoveToTarget" type="Node" parent="StateChart/Root/Mode_Normal"]
script = ExtResource("8_vqsdi")

[node name="Die" type="Node" parent="StateChart/Root/Mode_Normal/MoveToTarget"]
script = ExtResource("9_40na2")
to = NodePath("../../../Die")
event = &"sce_die"
delay_in_seconds = "0.0"

[node name="To_Attack" type="Node" parent="StateChart/Root/Mode_Normal/MoveToTarget"]
script = ExtResource("9_40na2")
to = NodePath("../../Attack")
event = &"sce_attack"
delay_in_seconds = "0.0"

[node name="To_GetHit" type="Node" parent="StateChart/Root/Mode_Normal/MoveToTarget"]
script = ExtResource("9_40na2")
to = NodePath("../../../GetHit")
event = &"sce_get_hit"
delay_in_seconds = "0.0"

[node name="Attack" type="Node" parent="StateChart/Root/Mode_Normal"]
editor_description = "Doesn't react to getting hit."
script = ExtResource("8_vqsdi")

[node name="Die" type="Node" parent="StateChart/Root/Mode_Normal/Attack"]
script = ExtResource("9_40na2")
to = NodePath("../../../Die")
event = &"sce_die"
delay_in_seconds = "0.0"

[node name="To_Idle" type="Node" parent="StateChart/Root/Mode_Normal/Attack"]
script = ExtResource("9_40na2")
to = NodePath("../../Idle")
event = &"sce_idle"
delay_in_seconds = "0.0"

[node name="To_MoveToTarget" type="Node" parent="StateChart/Root/Mode_Normal/Attack"]
script = ExtResource("9_40na2")
to = NodePath("../../MoveToTarget")
event = &"sce_move_to_target"
delay_in_seconds = "0.0"

[node name="To_Mode_Berserk" type="Node" parent="StateChart/Root/Mode_Normal"]
script = ExtResource("9_40na2")
to = NodePath("../../Mode_Berserk")
event = &"sce_berserk_start"
delay_in_seconds = "0.0"

[node name="Mode_Berserk" type="Node" parent="StateChart/Root"]
editor_description = "Berserk Mode doesn't react to getting hit.
Changes color of enemy and increases attack frequency."
script = ExtResource("6_fmnhd")
initial_state = NodePath("Berserk_Attack")

[node name="Berserk_Attack" type="Node" parent="StateChart/Root/Mode_Berserk"]
script = ExtResource("8_vqsdi")

[node name="To_MoveToTarget" type="Node" parent="StateChart/Root/Mode_Berserk/Berserk_Attack"]
script = ExtResource("9_40na2")
to = NodePath("../../Berserk_MoveToTarget")
event = &"sce_move_to_target"
delay_in_seconds = "0.0"

[node name="Berserk_MoveToTarget" type="Node" parent="StateChart/Root/Mode_Berserk"]
script = ExtResource("8_vqsdi")

[node name="To_Attack" type="Node" parent="StateChart/Root/Mode_Berserk/Berserk_MoveToTarget"]
script = ExtResource("9_40na2")
to = NodePath("../../Berserk_Attack")
event = &"sce_attack"
delay_in_seconds = "0.0"

[node name="Die" type="Node" parent="StateChart/Root/Mode_Berserk"]
script = ExtResource("9_40na2")
to = NodePath("../../Die")
event = &"sce_die"
delay_in_seconds = "0.0"

[node name="To_NormalMode" type="Node" parent="StateChart/Root/Mode_Berserk"]
script = ExtResource("9_40na2")
to = NodePath("../../Mode_Normal/Attack")
event = &"sce_berserk_stop"
delay_in_seconds = "0.0"

[node name="GetHit" type="Node" parent="StateChart/Root"]
script = ExtResource("8_vqsdi")

[node name="Die" type="Node" parent="StateChart/Root/GetHit"]
script = ExtResource("9_40na2")
to = NodePath("../../Die")
event = &"sce_die"
delay_in_seconds = "0.0"

[node name="To_OldState" type="Node" parent="StateChart/Root/GetHit"]
script = ExtResource("9_40na2")
to = NodePath("../../HistoryState")
event = &"sce_old_state"
delay_in_seconds = "0.0"

[node name="Die" type="Node" parent="StateChart/Root"]
script = ExtResource("8_vqsdi")

[connection signal="state_entered" from="StateChart/Root/Mode_Normal/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Mode_Normal/Idle" to="." method="_on_idle_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Mode_Normal/MoveToTarget" to="." method="_on_move_to_target_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Mode_Normal/MoveToTarget" to="." method="_on_move_to_target_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Mode_Normal/Attack" to="." method="_on_attack_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Mode_Normal/Attack" to="." method="_on_attack_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Mode_Berserk" to="." method="_on_mode_berserk_state_entered"]
[connection signal="state_exited" from="StateChart/Root/Mode_Berserk" to="." method="_on_mode_berserk_state_exited"]
[connection signal="state_entered" from="StateChart/Root/Mode_Berserk/Berserk_Attack" to="." method="_on_berserk_attack_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Mode_Berserk/Berserk_Attack" to="." method="_on_berserk_attack_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Mode_Berserk/Berserk_MoveToTarget" to="." method="_on_berserk_move_to_target_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Mode_Berserk/Berserk_MoveToTarget" to="." method="_on_berserk_move_to_target_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/GetHit" to="." method="_on_get_hit_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/GetHit" to="." method="_on_get_hit_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Die" to="." method="_on_die_state_entered"]

[editable path="Visuals/FXStepDustSpawner"]
